--- a/VRChat/55/1131055.html
+++ b/VRChat/55/1131055.html
@@ -80,9 +80,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "Q9E/yPBpyw3ehTOyUSkpG8/DSovoXR3v7YyuehzFgh4="></script>
+    "hVTd0Os0GRYj+AKIxm0nGPDAIvkbotfbBUIjuvBQ1d8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【U10素体版】ver.6.0.2【完全QUEST対応版は別ページにあります】","description":"※7500ポリゴン以下の完全クエスト対応版は別ページにてご紹介しています→ https://kindergarten21.booth.pm/items/2406667 ※\n\n----------------------------------------\n※ver.6.0よりPhysBone対応となりました※\n\n現在のデータは最新のVRCに対応するため以下の変更を行いました。\n・2022年5月よりシェーダーの同梱を廃止\n・2022年8月よりアニメーションの同梱を廃止\nThe following changes have been made to the current data to comply with the latest VRC\n*Shaders will no longer be included in May 2022.\n*The animation will no longer be included in the package as of August 2022.\n\n\nパッケージのインポートを行う前に以下のシェーダーをDLし、インポートしてください。\nU10Hで使用しているシェーダーは以下の通りです。\nPlease DL and import the following shaders before importing the package.\nThe following shaders are used in U10H.\n\n「ArxCharacterShaders」\nhttps://packetbird.booth.pm/items/2493539\n\n「ユニティちゃんトゥーンシェーダー2.0」\nhttps://unity-chan.com　右上のDATA DOWNLOADから進んだ先。\n\n「Crystal Shader」\nhttps://booth.pm/ja/items/1148311\n\n「MToon」※同梱済み\nhttps://github.com/Santarh/MToon\n\n\nまた、アニメーションファイルもDLしインポートしてください。\nアニメーションファイルは、BOOTHの商品ページから無料でDLできるようになっています。\nPlease also DL and import the animation files.\nThe animation files can be downloaded free of charge from the BOOTH product page.\n\n----------------------------------------\n\n\n\n常なるこの世を維持する【常世界機構】が管理保有する汎用人型自立稼働システムU10。\n…を人間ボディで遊びたい方向けの素体ver.です。\nU10の顔で人間になりたい方はご利用ください。\n\nリップシンク・フルトラッキング・アイトラッキング対応／約40,000ポリゴン／ユニティちゃんトゥーンシェーダー使用です。\n\nVRchat用にセットアップ済みのモデル／QUEST用シェーダーに対応した1メッシュモデル／VRMモデル／cluster対応VRM／素体／改変用PSDデータ／改変用blenderデータが同梱されています。\n\nVRChat内のワールドにて試着が可能です。\nhttps://www.vrchat.com/home/launch?worldId=wrld_12ca024e-3ae8-4966-bf2f-c0621f622568\u0026instanceId=0\n\nVRM版／cluster対応版の挙動はVRoidHubにて確認できます。\nVRM版→ https://hub.vroid.com/characters/2406757829548781233\ncluster対応版→ https://hub.vroid.com/characters/2335992945231988540","url":"https://booth.pm/ja/items/1131055","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/1131055/59be520a-54f5-4825-affe-96af28b0f306_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Q9E/yPBpyw3ehTOyUSkpG8/DSovoXR3v7YyuehzFgh4="></script>
+    nonce="hVTd0Os0GRYj+AKIxm0nGPDAIvkbotfbBUIjuvBQ1d8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -167,7 +167,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【U10素体版】ver.6.0.2【完全QUEST対応版は別ページにあります】
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -203,6 +203,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -464,9 +466,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
@@ -1018,7 +1017,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;}]"
+    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;acosta!マルシェvol.5&quot;,&quot;value&quot;:&quot;acosta-marche5&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
